--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -36,6 +36,11 @@
             <li><a href="#">Help</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
           </ul>
+          <ul class="nav navbar-nav navbar-right mobile">
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Analytics</a></li>
+          </ul>
           <p class="navbar-text navbar-right">Simão Neves</p>
         </div>
       </div>
@@ -43,7 +48,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-2">
+        <div class="col-md-2 side-mobile">
           <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
               <li><a href="#">Dashboard</a></li>
@@ -53,7 +58,11 @@
           </div>
         </div>
 
-        <div class="col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <div class="alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            Photograph successfully created!
+          </div>
           <ol class="breadcrumb">
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Add new Gallery</a></li>
@@ -154,7 +163,28 @@
 
           <h2 class="sub-header">Section title</h2>
           <p>Add more content</p>
-          
+          <form role="form" action="self">
+            <div class="form-group has-error">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+              <p class="help-block">Example block-level help text here.</p>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputFile">File input</label>
+              <input type="file" id="exampleInputFile">
+              <p class="help-block">Example block-level help text here.</p>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Check me out
+              </label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
         </div>
       </div>
     </div>
